# skripsi

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  check_stats.ts  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260502083453_init/: migration.sql
backend/src/: index.ts  prisma.ts
backend/src/middlewares/: adminMiddleware.ts  authMiddleware.ts  errorHandler.ts  uploadMiddleware.ts
backend/src/routes/: admin.ts  auth.ts  history.ts  predict.ts  testimonial.ts
backend/src/services/: checkModels.ts  geminiService.ts  mlService.ts
frontend/: Dockerfile  README.md  env.example  extract_css.py  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  axios.ts
frontend/src/components/: AuthLayout.tsx  Navbar.tsx  PrintReport.tsx  ProtectedRoute.tsx
frontend/src/constants/: landingContent.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  HistoryDetailPage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  PredictPage.tsx  PrivacyPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TermsPage.tsx
frontend/src/services/: adminService.ts  authService.ts  historyService.ts  predictService.ts  testimonialService.ts
frontend/src/types/: index.ts
ml-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ml-service/app/: main.py  model.py  schemas.py
(+16 files in other folders)
