[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "FastAPI service for Chicken Feces Classification using ViT"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
torch = "^2.2.0"
torchvision = "^0.17.0"
transformers = "^4.37.2"
pillow = "^10.2.0"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
pydantic = "^2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
